--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ Use programming languages to develop
 logical thinking and problem solving skills.  
 <br>
 <br>
-Essential Question: How is CSS used to create within a HTML document?
+Essential Question: How is CSS used to create design within a HTML document?
 <br>
 <br>
 Objective: Students will be able to embed a CSS (cascading style sheet) into a HTML document.
